Migration to new APIs, part II: use MediaQueryList in CSSHandler's media-related events.
This is not the final shape that the code is going to have, but a reference step. I prefer dividing the changes in manageable steps, as opposed to one big commit that leaves everything in final state.
Next step involves changes to TokenProducer.